fixes twitter pushing it's own width too wide in firefox

--- a/Web/Content/body.less
+++ b/Web/Content/body.less
@@ -21,6 +21,7 @@ pre {
 
 aside {
     float: right;
+    width: 210px;
 
     h1 {
         font-family: Helvetica,Roboto,"Segoe UI",Calibri,sans-serif;
